--- a/IconChanger/Info.plist
+++ b/IconChanger/Info.plist
@@ -7,7 +7,7 @@
 	<key>SUEnableInstallerLauncherService</key>
 	<true/>
 	<key>SUFeedURL</key>
-	<string>https://underthestars-zhy.github.io/IconChanger/IconChanger/sparkle.xml</string>
+	<string>https://bengerthelorf.github.io/macIconChanger/IconChanger/sparkle.xml</string>
 	<key>SUPublicEDKey</key>
 	<string>WaX8A6fbOjG2ryw9va3sfqGtHv2koXeQUs5I+EgYMgw=</string>
 </dict>
